Actualizacion del index

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <div class="header-icons">
     <span class="icon-user">👤</span>
     <span class="icon-cart" id="cart-icon">🛒 <span id="cart-count">0</span></span>
+    <button id="wishlist-button" class="wishlist-button">💖</button>
   </div>
 </header>
 
@@ -143,7 +144,7 @@
   <!-- Contacto -->
   <section id="contacto" class="contacto">
     <h2 class="section-title">Contáctanos</h2>
-    <p>Para más información, escríbenos a contacto@noblezza.com o llámanos al +52 55 1234 5678.</p>
+    <p>Para más información, escríbenos a contacto@noblezza.com o llámanos al  +57 3044912629.</p>
   </section>
 
   <!-- Sección de Redes Sociales -->
@@ -167,6 +168,20 @@
   <footer>
     <p>&copy; 2025 Noblezza Joyería. Todos los derechos reservados.</p>
   </footer>
+
+  <script src="js/script.js" defer></script>
+  <!-- Lista de deseos flotante -->
+<div id="wishlist-popup" class="wishlist-popup">
+  <div class="wishlist-header">
+    <h3>Lista de Deseos</h3>
+    <button id="close-wishlist" class="close-btn">✖</button>
+  </div>
+  <div id="wishlist-items" class="wishlist-items">
+    <p>No tienes artículos en tu lista de deseos.</p>
+  </div>
+</div>
+<!-- Scripts -->
+<script src="js/script.js" defer></script>
 
   <script src="js/script.js" defer></script>
 </body>
